fixed a couple of crashes and change the view of citizenHomePage

--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CitizenHomePage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CitizenHomePage.xaml
@@ -63,17 +63,17 @@
                     <StackLayout  Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                         <StackLayout HorizontalOptions="Start">
                             <StackLayout Spacing="0" Padding="10" Orientation="Horizontal">
-                                <Label Style="{StaticResource ListLabelStyleTablet}" FontAttributes="Bold" Text="{Binding Weekday, StringFormat='{0}'}"></Label>
-                                <Label Style="{StaticResource ListLabelStyleTablet}" FontAttributes="Bold" Text="{Binding CurrentTime.Day, StringFormat=' d. {0}.'}"></Label>
-                                <Label Style="{StaticResource ListLabelStyleTablet}" FontAttributes="Bold" Text="{Binding Month, StringFormat=' {0}'}" ></Label>
+                                <Label FontSize="50" FontAttributes="Bold" Text="{Binding Weekday, StringFormat='{0}'}"></Label>
+                                <Label FontSize="50" FontAttributes="Bold" Text="{Binding CurrentTime.Day, StringFormat=' d. {0}.'}"></Label>
+                                <Label FontSize="50" FontAttributes="Bold" Text="{Binding Month, StringFormat=' {0}'}" ></Label>
                             </StackLayout>
                         </StackLayout>
                         <StackLayout HorizontalOptions="CenterAndExpand">
                         </StackLayout>
                         <StackLayout  HorizontalOptions="End">
                             <StackLayout Spacing="0" Padding="10" Orientation="Horizontal">
-                                <Label Style="{StaticResource ListLabelStyleTablet}" FontAttributes="Bold" Text=" kl. "></Label>
-                                <Label Style="{StaticResource ListLabelStyleTablet}" FontAttributes="Bold" Text="{Binding CurrentTime, StringFormat='{0:HH:mm:ss}'}"></Label>
+                                <Label FontSize="50" FontAttributes="Bold" Text=" kl. "></Label>
+                                <Label FontSize="50" FontAttributes="Bold" Text="{Binding CurrentTime, StringFormat='{0:HH:mm:ss}'}"></Label>
                             </StackLayout>
                         </StackLayout>
                     </StackLayout>
@@ -87,8 +87,10 @@
                                 </Grid.ColumnDefinitions>
                                 <Image HeightRequest="300" WidthRequest="300" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Source="{Binding PictureOfWhoIsVisiting}" />
                                 <StackLayout Grid.Column="1" Spacing="0" Padding="10" Orientation="Vertical">
-                                    <Label Style="{StaticResource ListLabelStyleTablet}" FontAttributes="Bold"  Text="Næste aftale:"></Label>
-                                    <Label Style="{StaticResource ListLabelStyleTablet}" FontAttributes="Bold" Text="{Binding Appointment.Subject,StringFormat='{0}'}"></Label>
+                                    <Label FontSize="36" FontAttributes="Bold"  Text="Næste aftale:"></Label>
+                                    <Label FontSize="30" Text="{Binding Appointment.Subject,StringFormat='{0}'}"></Label>
+                                    <Label FontSize="30" Text="{Binding Appointment.StartTime,StringFormat='Fra {0:HH:mm}'}"></Label>
+                                    <Label FontSize="30" Text="{Binding Appointment.EndTime,StringFormat='Til {0:HH:mm}'}"></Label>
                                 </StackLayout>
                             </Grid>
                         </StackLayout>
@@ -96,7 +98,7 @@
                         </StackLayout>
                         <StackLayout  VerticalOptions="End">
                             <StackLayout Spacing="0" Padding="10" Orientation="Vertical">
-                                <customRenders:CustomButtonRender  Style="{StaticResource SeeListOfDayAppointmentsButtonStyle}" Text="Se liste over dagens aftaler"/>
+                                <customRenders:CustomButtonRender FontSize="36" HeightRequest="80" Command="{Binding GoToCalendarDayViewCommand}" Style="{StaticResource SeeListOfDayAppointmentsButtonStyle}" Text="Se liste over dagens aftaler"/>
                             </StackLayout>
                         </StackLayout>
                     </StackLayout>
