--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
@@ -63,12 +63,12 @@
                 <Entry Text="{Binding UpdatedUser.Phone}" TextChanged="Entry_OnTextChanged" Keyboard="Numeric" x:Name="PhoneEntry"  Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
 
-                <Label Text="{i18n:Translate Picture}" VerticalOptions="End" Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+                <!--<Label Text="{i18n:Translate Picture}" VerticalOptions="End" Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4"></Label>
 
-                <!--This is used as a seperator line in the grid-->
+                --><!--This is used as a seperator line in the grid--><!--
                 <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="4"/>
 
-                <Image Source="{Binding UpdatedUser.Picture}" Grid.Row="11" Grid.Column="2" Grid.ColumnSpan="2"></Image>
+                <Image Source="{Binding UpdatedUser.Picture}" Grid.Row="11" Grid.Column="2" Grid.ColumnSpan="2"></Image>-->
 
             </Grid>
             <StackLayout VerticalOptions="Start" Orientation="Vertical">
